...
                            <constraint firstAttribute="trailing" secondItem="j5j-78-c47" secondAttribute="trailing" id="mzE-18-v5e"/>
                            <constraint firstItem="pY1-5A-5vT" firstAttribute="bottom" secondItem="yA6-Vw-GBs" secondAttribute="bottom" constant="16" id="qSI-yn-bTI"/>
                            <constraint firstItem="j5j-78-c47" firstAttribute="top" secondItem="pY1-5A-5vT" secondAttribute="top" id="sX3-QM-WjK"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="offersTbl" destination="yA6-Vw-GBs" id="saD-FW-a5f"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4eT-87-hLg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1575" y="646"/>
        </scene>
...
                            <constraint firstItem="spr-ae-975" firstAttribute="top" secondItem="rzu-of-9k8" secondAttribute="bottom" constant="10" id="lxH-59-3mz"/>
                            <constraint firstItem="rzu-of-9k8" firstAttribute="leading" secondItem="bxh-s6-hzp" secondAttribute="leading" id="maP-nB-gkL"/>
                            <constraint firstItem="spr-ae-975" firstAttribute="leading" secondItem="Ago-rw-dXM" secondAttribute="leading" constant="16" id="y4f-Be-8Ub"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="tblViewComment" destination="spr-ae-975" id="ONj-kU-6gu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KXb-B3-vDx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-11" y="1354"/>
        </scene>
...
                            <constraint firstItem="r8i-BE-sDj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xlD-CJ-LRh" secondAttribute="trailing" constant="4" id="s2y-UV-pfV"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="lblAvgRating" destination="xlD-CJ-LRh" id="mAo-zB-6Qt"/>
                        <outlet property="lblTotalCountReview" destination="6Sq-fL-jvh" id="uLs-lC-bNk"/>
                        <outlet property="reviewTbl" destination="Qd4-lc-uLx" id="rAB-Cv-C9g"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Htz-o9-ZQT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1575" y="1354"/>
        </scene>
...
