...
    static let emptyPhoneNumber = NSLocalizedString("Enter your phone number", comment: "")
    static let emptyName = NSLocalizedString("Please enter name", comment: "")
    static let emptyEmail = NSLocalizedString("Please enter email", comment: "")
    static let invalidEmail = NSLocalizedString("Please enter valid email", comment: "")
    static let invalidPhoneNumber = NSLocalizedString("Please enter valid phone number", comment: "")
    static let invalidPhoneNumberFormat = NSLocalizedString("Phone number can only contain digits", comment: "")
    static let emptyMessage = NSLocalizedString("Please enter message", comment: "")
    static let invalidEmptyDescription = NSLocalizedString("Please enter description", comment: "")
    static let emptytittle = NSLocalizedString("Please enter title", comment: "")
    static let emptyDescription = NSLocalizedString("Please enter description", comment: "")
    static let reportSuccess = NSLocalizedString("Report Successfully", comment: "")
    static let deleteNote = NSLocalizedString("Delete Note", comment: "")
    static let cameraSupportError = NSLocalizedString("Your device does not support camera.", comment: "")
...
